Add server, deployment and development specific code and files.

--- a/Pipfile
+++ b/Pipfile
@@ -6,18 +6,19 @@ name = "pypi"
 [packages]
 numpy = "*"
 pandas = "*"
-scikit-learn = "*"
-torch = "*"
 tqdm = "*"
 pyodbc="*"
 python-dotenv="*"
-jinjasql = "*"
+matplotlib = "*"
+seaborn = "*"
+lightfm = "*"
+scipy = "*"
+flask = "*"
 
 [dev-packages]
 black = "==19.3b0"
 flake8 = "*"
 mypy = "*"
-pre-commit = "*"
 
 [requires]
 python_version = "3.7"
